--- a/Site do jogo/index.css
+++ b/Site do jogo/index.css
@@ -46,8 +46,8 @@ a {
 
 }
 nav img {
-    width: 150px;
-    height: 150px;
+    width: 100px;
+    height: 100px;
     border-radius: 50%;
     border: 5px solid #f4fe08;
 }
@@ -66,7 +66,7 @@ footer img {
 }
 
 footer {
-    bottom: auto;
+    bottom: 10px;
     display: flex;
     justify-content: center;
 }
@@ -107,19 +107,6 @@ button {
     height: 30px;
 }
 section {
-    padding-top:0px;
-    max-width: 12000px;
-    margin: 0 auto;
-    margin-top: -100px;
-}
-
-section1 {
-    padding-top:0px;
-    max-width: 12000px;
-    margin: 0 auto;
-    margin-top: -100px;
-}
-section1 {
     padding-top:0px;
     max-width: 12000px;
     margin: 0 auto;
@@ -175,7 +162,6 @@ nav a:hover {
     justify-content: center;
     gap: 40px;
     margin-right: 30px;
-    margin-top: 50px;
     flex-wrap: wrap;
 }
 .promotion-card {
@@ -190,6 +176,31 @@ nav a:hover {
     transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 .promotion-card:hover {
+    transform: translateY(-10px);
+    box-shadow: 0 10px 20px rgba(244, 254, 0, 0.4);
+}
+
+.promotion-section1 {
+    display: flex;
+    justify-content: center;
+    gap: 40px;
+    margin-left: 630px;
+    flex-wrap: wrap;
+    margin-top: 0px;
+}
+.promotion-card1 {
+    margin-top: 0px;
+    background-color: #1a1a1a;
+    border: 2px solid #f4fe08;
+    border-radius: 10px;
+    padding: 20px;
+    margin-left: 630px;
+    width: 45%;
+    max-width: 500px;
+    text-align: center;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+.promotion-card1:hover {
     transform: translateY(-10px);
     box-shadow: 0 10px 20px rgba(244, 254, 0, 0.4);
 }
