--- a/Site do jogo/index.css
+++ b/Site do jogo/index.css
@@ -8,6 +8,7 @@ body {
     overflow-x: hidden;
 }
 
+ /*parte de cima */
 ul {
     
     background-color:  black;
@@ -27,6 +28,7 @@ a {
     text-decoration: none;
 }
 
+/* Botão amarelo com efeito */
 .cta-button {
     display: inline-block;
     background: #f4fe08;
@@ -37,40 +39,77 @@ a {
     font-weight: bold;
     transition: transform 0.3s, box-shadow 0.3s;
 }
+/* Alteração de cor do botão */
+button {
+    color: black;
+    background-color: white;
+    border: none;
+    width: 100px;
+    height: 30px;
+}
 
 .cta-button:hover {
     transform: scale(1.05);
     background: #000;
     color:#f4fe08;
     box-shadow: 0 0 15px #f4fe08;
-
 }
+/* DEfine o tam da logo */
 nav img {
-    width: 150px;
-    height: 150px;
+    width: 100px;
+    height: 100px;
     border-radius: 50%;
     border: 5px solid #f4fe08;
 }
 
-.center {
-    text-align: center;
+/* Beleza */
+nav a {
+    font-size: 20px;
+    border: #f4fe08 5px;
 }
+
+/* Muda de branco para yellow */
+nav a:hover {
+    color: #f4fe08;
+}
+
+/* Barrinha amarela */
+nav a:hover {
+    color: #f4fe08;
+    border-bottom: 2px solid #f4fe08;
+}
+
 
 h1 {
     color: #f4fe08;
 }
 
+.prf-img{
+    height: 50px;width: 50px;
+    border: none;
+}
+
+.prf-txt:hover {
+    border-bottom: none;
+    color: white;
+}
+.prf-txt {
+    text-decoration: none;
+}
+/* Define o tamanho das img do rodapé */
 footer img {
     width: 40px;
     height: 40px;
 }
 
+/* Alinha ao centro */
 footer {
-    bottom: auto;
+    bottom: 10px;
     display: flex;
     justify-content: center;
 }
 
+/* Beleza */
 footer a {
     margin: 20px;
     text-align: center;
@@ -80,32 +119,12 @@ footer p {
     margin-top: 2px;
 }
 
+/* Cria um container q reduz o tamanho */
 .container {
     padding: 0px 50px;
 }
 
-nav a {
-    font-size: 20px;
-    border: #f4fe08 5px;
-}
-
-nav a:hover {
-    color: #f4fe08;
-}
-
-.contact-form input{
-    width: 100%;
-    padding: 8px 0;
-    margin: 8px 0;
-}
-
-button {
-    color: black;
-    background-color: white;
-    border: none;
-    width: 100px;
-    height: 30px;
-}
+/* Botão central */
 section {
     padding-top:0px;
     max-width: 12000px;
@@ -113,18 +132,6 @@ section {
     margin-top: -100px;
 }
 
-section1 {
-    padding-top:0px;
-    max-width: 12000px;
-    margin: 0 auto;
-    margin-top: -100px;
-}
-section1 {
-    padding-top:0px;
-    max-width: 12000px;
-    margin: 0 auto;
-    margin-top: -100px;
-}
 .hero {
     height: 100vh;
     background: url() no-repeat center/cover;
@@ -152,11 +159,10 @@ section1 {
     font-weight: 700;
     border-radius: 5px;
     transition: background-color 0.3s;
+    transition: transform 0.3s, box-shadow 0.3s;
 }
-nav a:hover {
-    color: #f4fe08;
-    border-bottom: 2px solid #f4fe08;
-}
+
+/* Caixa amarela entorno dos personagens */
 .perso {
     background-color: #1a1a1a;
     border: 2px solid #f4fe08;
@@ -170,14 +176,15 @@ nav a:hover {
 
 }
 
+/* Faz uma box nas noticias */
 .promotion-section {
     display: flex;
     justify-content: center;
     gap: 40px;
     margin-right: 30px;
-    margin-top: 50px;
     flex-wrap: wrap;
 }
+
 .promotion-card {
     background-color: #1a1a1a;
     border: 2px solid #f4fe08;
@@ -193,3 +200,33 @@ nav a:hover {
     transform: translateY(-10px);
     box-shadow: 0 10px 20px rgba(244, 254, 0, 0.4);
 }
+
+.promotion-section1 {
+    display: flex;
+    justify-content: center;
+    gap: 40px;
+    margin-left: 630px;
+    flex-wrap: wrap;
+    margin-top: 0px;
+}
+.promotion-card1 {
+    margin-top: 0px;
+    background-color: #1a1a1a;
+    border: 2px solid #f4fe08;
+    border-radius: 10px;
+    padding: 20px;
+    margin-left: 630px;
+    width: 45%;
+    max-width: 500px;
+    text-align: center;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+.promotion-card1:hover {
+    transform: translateY(-10px);
+    box-shadow: 0 10px 20px rgba(244, 254, 0, 0.4);
+}
+
+
+
+
+
